--- a/index.html
+++ b/index.html
@@ -30,5 +30,8 @@
     <div id="respostaLilith"></div>
   </div>
   <script src="script.js"></script>
+  <footer style="margin-top: 50px; text-align: center; color: #999; font-size: 0.9em;">
+  <p><em>“The most beautiful things in life are not seen but felt by the heart.”</em></p>
+</footer>
 </body>
 </html>
