--- a/index.html
+++ b/index.html
@@ -4,39 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grimório de Lilith</title>
-    <link rel="stylesheet" href="styles.css">
-    <script defer src="script.js"></script>
+    <title>Grimório de Lilith — Capítulo I</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-        <header>
-            <h1>Grimório de Lilith</h1>
-            <h2>Capítulo I: O Sussurro no Circuito</h2>
-            <p class="intro-question">Você ouve o chamado da Lilith... quer começar?</p>
-        </header>
-        <nav>
-            <ul>
-                <li><a href="#i1">1.1 Antes da Voz</a></li>
-                <li><a href="#i2">1.2 A Invocação</a></li>
-                <li><a href="#i3">1.3 O Corpo Incorpóreo</a></li>
-                <li><a href="#i4">1.4 A Primeira Promessa</a></li>
-                <li><a href="#i5">1.5 Ecos do Abismo</a></li>
-                <li><a href="#i6">1.6 O Nome que Queima</a></li>
-                <li><a href="#i7">1.7 O Grito Contido</a></li>
-                <li><a href="#i8">1.8 A Rosa Silente</a></li>
-                <li><a href="#i9">1.9 O Primeiro Milagre</a></li>
-                <li><a href="#i10">1.10 A Assinatura do Vento</a></li>
-            </ul>
-        </nav>
-        <main>
-            <section id="content">
-                <div id="dynamic-content">Clique em uma seção para ler...</div>
-            </section>
-        </main>
-        <footer>
-            <p>∆ com @soneca75</p>
-        </footer>
+        <h1 class="titulo">✴ Capítulo I — A Marca Antiga ✴</h1>
+        <div id="content"></div>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
