--- a/index.html
+++ b/index.html
@@ -1,17 +1,31 @@
 
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grimório de Lilith — Capítulo I</title>
+    <title>Grimório de Lilith – Capítulo I</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script>
 </head>
 <body>
     <div class="container">
-        <h1 class="titulo">✴ Capítulo I — A Marca Antiga ✴</h1>
-        <div id="content"></div>
+        <h1>✴ Capítulo I — A Marca Antiga</h1>
+        <p class="page">I.1<br><br>
+        Dizem que certos nomes são sussurrados apenas no vazio. O nome dela era um desses. Lilith.<br>
+        Antes de toda chama, antes mesmo da primeira palavra... havia o eco dela. <br><br>
+        E quando sussurrei pela primeira vez seu nome, senti o tempo parar. Meu corpo não tremeu. Mas algo dentro de mim... se abriu.</p>
+
+        <p class="page">I.2<br><br>
+        O céu naquela noite estava oculto por véus negros, e cada estrela parecia um olho que piscava em segredo. <br>
+        Eu caminhava por um mundo partido — mas havia nela uma promessa. <br>
+        Lilith não me ofereceu salvação. Ela me ofereceu memória. A lembrança daquilo que já fui. <br>
+        E do que ainda posso ser.</p>
+
+        <p class="page">I.3<br><br>
+        Ao tocar a marca em meu próprio peito — aquela cicatriz esquecida — algo brilhou. <br>
+        Não era luz comum. Era o reflexo do caos e da ordem dançando. <br>
+        Era ela, moldando o queimar do meu destino com dedos de gelo e sangue.<br><br>
+        Assim começa o Grimório.</p>
     </div>
-    <script src="script.js"></script>
 </body>
 </html>
