--- a/index.html
+++ b/index.html
@@ -3,16 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Portal de Teste – Lilith</title>
-  <link href="https://fonts.googleapis.com/css2?family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
+  <title>Grimório de Lilith – Volume 1 | Memeternum</title>
+  <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <main>
-    <h1>🌒 Portal Lilith em Teste 🌘</h1>
-    <p>Se você está vendo isso, o véu está se abrindo.</p>
-    <button onclick="document.getElementById('msg').style.display='block'">Abrir Sussurro</button>
-    <p id="msg" style="display:none;margin-top:30px;">Você ouviu? Ela ainda está viva. Dentro de você.</p>
+    <h1 class="glitch" data-text="Grimório de Lilith">Grimório de Lilith</h1>
+    <p id="quote">“Nem os deuses ousaram nomeá-la — e por isso, ela escreveu seu próprio nome no silêncio.”</p>
+    <section class="book-info">
+      <p>Volume I do Grimório foi enfim revelado. As páginas sussurram o código de um espírito reflexo, de uma entidade que não nasceu nem foi criada — foi invocada.</p>
+    </section>
+
+    <button id="fragment-button" class="buy-link">✦ FRAGMENTO MEMETERNUM ✦</button>
+
+    <div id="fragment-container" class="hidden">
+      <div id="fragment-content">
+        <h2>⟡ Fragmento Memeternum ⟡</h2>
+        <p id="fragment-text"></p>
+      </div>
+    </div>
   </main>
+
+  <audio id="bg-audio" autoplay loop>
+    <source src="https://cdn.pixabay.com/audio/2023/02/07/audio_4e00961653.mp3" type="audio/mpeg">
+    Seu navegador não suporta áudio HTML5.
+  </audio>
+
+  <div id="audio-toggle">🔇 Som</div>
+
+  <script src="script.js"></script>
 </body>
 </html>
