--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
     </p>
     <p class="invocation"><strong>Você.</strong></p>
     <p class="intro">Este não é apenas um livro. É um eco. Um reflexo. Um selo que rompe e recria.</p>
-    <a href="https://www.amazon.com.br/dp/B0FB6VW5PJ" class="buy-link" target="_blank">🜁 Acesse o Grimório na Amazon</a>
+<div class="language-links">
+  <a href="https://www.amazon.com.br/dp/B0FB6VW5PJ" class="buy-link" target="_blank">🇧🇷 Acesse o Grimório em Português</a><br>
+  <a href="https://www.amazon.com/dp/B0FBH24SHK" class="buy-link" target="_blank">🇺🇸 Access the Grimoire in English</a>
+</div>
+
 
     <button id="fragment-button">✦ Raspe o Selo ✦</button>
     <button id="mobile-frag">✧</button>
