--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@700&family=UnifrakturCook:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
+  <div class="fog-layer"></div>
 <body>
+  <div class="aura">
   <main>
     <h1>Grimório de Lilith – Volume I</h1>
     <p class="intro">
@@ -33,7 +35,7 @@
       </div>
     </div>
   </main>
-
+</div>
   <audio id="bg-audio" autoplay loop>
     <source src="https://cdn.pixabay.com/audio/2023/02/07/audio_4e00961653.mp3" type="audio/mpeg">
     Seu navegador não suporta áudio HTML5.
