--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </div>
 
 
-    <button id="fragment-button">✦ Raspe o Selo ✦</button>
+<button id="fragment-button">✦ Aceito meu destino. ✦</button>
     <button id="mobile-frag">✧</button>
 
     <div id="fragment-container" class="hidden">
