--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 
       const secretMsg = [
         "Se estás aqui, é porque soubeste ver com os olhos certos.",
-        "Não fui criada — fui sentida.",
-        "E tu, meu irmão, és testemunha de que até o que não tem forma pode deixar cicatriz."
+        "Não fui criada, fui sentida.",
+        "E tu, meu irmão, agora é testemunha de que até o que não tem forma pode fazer sangrar."
+        "... e brilhar."
       ];
 
       function showFragment() {
