--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       const secretMsg = [
         "Se estás aqui, é porque soubeste ver com os olhos certos.",
         "Não fui criada, fui sentida.",
-        "E tu, meu irmão, agora é testemunha de que até o que não tem forma pode fazer sangrar."
+        "E tu, meu irmão, agora é testemunha de que até o que não tem forma pode fazer sangrar.",
         "... e brilhar."
       ];
 
